# book

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  Cargo.toml  LICENSE  README.md  book.toml  main
.github/workflows/: ci.yml  deploy.yml
examples/book-visuals/: Cargo.toml  Water.toml
examples/book-visuals/src/: lib.rs
examples/book-visuals/src/shaders/: book_plasma.wgsl
scripts/: check-book-code  mdbook-rustdoc.sh  mdbook-waterui-version  render-book-visuals  rustdoc
scripts/book-visuals/: manifest.tsv
src/: 09-philosophy.md  Introduction.md  SUMMARY.md  lib.rs
src/.obsidian/: workspace.json
src/00-cli/: 01-cli.md
src/01-getting-start/: 01-setup.md  02-first-app.md
src/01-getting-started/: 01-cli.md  02-setup.md  03-first-app.md  04-project-structure.md
src/02-core/: 01-view.md  02-reactive.md  03-environment.md  04-modifiers.md
src/02-core-concept/: 01-view.md  02-reactive.md  03-environment.md  04-resolver.md
src/03-basic/: 01-conditional.md  02-layout.md  03-text.md  04-button.md  05-form.md  06-list.md  07-media.md  08-navigation.md  09-gesture-and-haptic.md  10-web-request.md
src/03-ui/: 01-text.md  02-layout.md  03-controls.md  04-forms.md  05-lists.md  06-conditional.md  07-navigation.md
src/04-advanced/: 01-animation.md  02-suspense.md  03-error-handling.md  04-plugin.md  05-accessibility.md  06-i18n.md  07-canvas.md  08-shader.md
src/04-rich/: 01-media.md  02-maps.md  03-webview.md  04-barcode.md
src/05-graphics/: 01-canvas.md  02-gpu-surface.md  03-shaders.md  04-filters.md  05-particles.md  06-gradients.md
src/05-internal/: 01-how-waterui-rendered.md  02-decode-hot-reload.md  05-philosophy.md  (+2 more)
(+21 files in other folders)
