[package]
name = "waterui-tutorial-book"
version = "0.1.0"
edition = "2024"

# Tutorial book for testing code examples with real WaterUI
# Users only depend on `waterui` - all sub-crates are re-exported through it

[dependencies]
waterui = { path = "waterui", features = ["barcode", "map", "particle", "chart"] }
